// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card: typing in a supported link and pressing enter should not create an inline card 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "www.atlassian.com",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`card: typing in a supported link and pressing space should not create an inline card 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "www.atlassian.com",
          "type": "text",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
